--- a/cpe-website/index.html
+++ b/cpe-website/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
@@ -10,60 +9,79 @@
 </head>
 <body>
   <header>
-    <h1>基督權能福音教會</h1>
-    <nav><a href="login.html">管理者登入</a></nav>
+    <div class="logo">基督權能福音教會</div>
+    <nav>
+      <a href="login.html">管理登入</a>
+    </nav>
   </header>
-  <main>
-    <section>
-      <h2>主日講道影片</h2>
-      <div id="videos"></div>
-    </section>
-    <section>
-      <h2>主日週報</h2>
-      <ul id="bulletins"></ul>
-    </section>
-    <section>
-      <h2>最新課程</h2>
-      <ul id="courses"></ul>
-    </section>
+
+  <section class="hero">
+    <div class="hero-text">
+      <h1>歡迎來到我們的教會</h1>
+      <p>在這裡遇見神，體驗愛與真理。</p>
+    </div>
+  </section>
+
+  <main class="quick-links">
+    <a href="#videos" class="card">🎥 主日講道</a>
+    <a href="#bulletins" class="card">📰 主日週報</a>
+    <a href="#courses" class="card">📚 最新課程</a>
   </main>
+
+  <section class="section" id="videos">
+    <h2>主日講道影片</h2>
+    <div id="video-list"></div>
+  </section>
+
+  <section class="section" id="bulletins">
+    <h2>主日週報</h2>
+    <ul id="bulletin-list"></ul>
+  </section>
+
+  <section class="section" id="courses">
+    <h2>最新課程</h2>
+    <ul id="course-list"></ul>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 基督權能福音教會</p>
+  </footer>
+
   <script type="module">
     import { db, collection, getDocs } from './firebase.js';
 
-    async function renderData() {
-      const videosSnap = await getDocs(collection(db, "videos"));
-      const bulletinsSnap = await getDocs(collection(db, "bulletins"));
-      const coursesSnap = await getDocs(collection(db, "courses"));
+    async function loadData() {
+      const videos = await getDocs(collection(db, "videos"));
+      const bulletins = await getDocs(collection(db, "bulletins"));
+      const courses = await getDocs(collection(db, "courses"));
 
-      const videosContainer = document.getElementById("videos");
-      videosSnap.forEach(doc => {
+      const videoList = document.getElementById("video-list");
+      videos.forEach(doc => {
         const data = doc.data();
         const iframe = document.createElement("iframe");
         iframe.src = `https://www.youtube.com/embed/${data.youtubeId}`;
-        iframe.width = "560";
-        iframe.height = "315";
         iframe.allowFullscreen = true;
-        videosContainer.appendChild(iframe);
+        videoList.appendChild(iframe);
       });
 
-      const bulletinsContainer = document.getElementById("bulletins");
-      bulletinsSnap.forEach(doc => {
+      const bulletinList = document.getElementById("bulletin-list");
+      bulletins.forEach(doc => {
         const data = doc.data();
         const li = document.createElement("li");
         li.innerHTML = `<a href="${data.link}" target="_blank">${data.title}</a>`;
-        bulletinsContainer.appendChild(li);
+        bulletinList.appendChild(li);
       });
 
-      const coursesContainer = document.getElementById("courses");
-      coursesSnap.forEach(doc => {
+      const courseList = document.getElementById("course-list");
+      courses.forEach(doc => {
         const data = doc.data();
         const li = document.createElement("li");
         li.textContent = `${data.title} - ${data.date}`;
-        coursesContainer.appendChild(li);
+        courseList.appendChild(li);
       });
     }
 
-    renderData();
+    loadData();
   </script>
 </body>
 </html>
