--- a/index.html
+++ b/index.html
@@ -2,90 +2,86 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>基督權能福音教會</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Noto Sans TC', sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 20px;
-    }
-    header nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-    }
-    .hero {
-      background-image: url('https://images.unsplash.com/photo-1509395176047-4a66953fd231');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      text-align: center;
-      padding: 100px 20px;
-    }
-    .hero h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
-    .section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .section h2 {
-      margin-bottom: 20px;
-      color: #2c3e50;
-    }
-    footer {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 30px 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css"/>
+  <script type="module" src="firebase.js"></script>
 </head>
 <body>
-
   <header>
+    <div class="logo">基督權能福音教會</div>
     <nav>
-      <strong>基督權能福音教會</strong>
-      <a href="#about">關於我們</a>
-      <a href="#services">聚會時間</a>
-      <a href="#contact">聯絡我們</a>
+      <a href="login.html">管理登入</a>
     </nav>
   </header>
 
-  <div class="hero">
-    <h1>歡迎來到基督權能福音教會</h1>
-    <p>一個充滿愛與盼望的屬靈家園</p>
-  </div>
-
-  <section class="section" id="about">
-    <h2>關於我們</h2>
-    <p>我們是一群熱愛耶穌、彼此相愛的弟兄姊妹，致力於將福音帶給社區每一個角落。</p>
+  <section class="hero">
+    <div class="hero-text">
+      <h1>歡迎來到我們的教會</h1>
+      <p>在這裡遇見神，體驗愛與真理。</p>
+    </div>
   </section>
 
-  <section class="section" id="services">
-    <h2>聚會時間與地點</h2>
-    <ul>
-      <li>主日崇拜：每週日上午 10:00</li>
-      <li>禱告會：每週三晚上 7:30</li>
-      <li>地點：台北市信義區信義路100號</li>
-    </ul>
+  <main class="quick-links">
+    <a href="#videos" class="card">🎥 主日講道</a>
+    <a href="#bulletins" class="card">📰 主日週報</a>
+    <a href="#courses" class="card">📚 最新課程</a>
+  </main>
+
+  <section class="section" id="videos">
+    <h2>主日講道影片</h2>
+    <div id="video-list"></div>
   </section>
 
-  <footer id="contact">
-    <p>聯絡我們：christ.power.church@gmail.com</p>
-    <p>地址：台北市信義區信義路100號</p>
+  <section class="section" id="bulletins">
+    <h2>主日週報</h2>
+    <ul id="bulletin-list"></ul>
+  </section>
+
+  <section class="section" id="courses">
+    <h2>最新課程</h2>
+    <ul id="course-list"></ul>
+  </section>
+
+  <footer>
     <p>&copy; 2025 基督權能福音教會</p>
   </footer>
 
+  <script type="module">
+    import { db, collection, getDocs } from './firebase.js';
+
+    async function loadData() {
+      const videos = await getDocs(collection(db, "videos"));
+      const bulletins = await getDocs(collection(db, "bulletins"));
+      const courses = await getDocs(collection(db, "courses"));
+
+      const videoList = document.getElementById("video-list");
+      videos.forEach(doc => {
+        const data = doc.data();
+        const iframe = document.createElement("iframe");
+        iframe.src = `https://www.youtube.com/embed/${data.youtubeId}`;
+        iframe.allowFullscreen = true;
+        videoList.appendChild(iframe);
+      });
+
+      const bulletinList = document.getElementById("bulletin-list");
+      bulletins.forEach(doc => {
+        const data = doc.data();
+        const li = document.createElement("li");
+        li.innerHTML = `<a href="${data.link}" target="_blank">${data.title}</a>`;
+        bulletinList.appendChild(li);
+      });
+
+      const courseList = document.getElementById("course-list");
+      courses.forEach(doc => {
+        const data = doc.data();
+        const li = document.createElement("li");
+        li.textContent = `${data.title} - ${data.date}`;
+        courseList.appendChild(li);
+      });
+    }
+
+    loadData();
+  </script>
 </body>
 </html>
